# aws-research-wizard

./: .pre-commit-config-new.yaml  .pre-commit-config.yaml  AWS_RESEARCH_WIZARD_SUMMARY.md  CHANGELOG.md  CONSOLIDATION_COMPLETE.md  COPYRIGHT  DEPLOYMENT_ISSUES_LOG.md  DEPLOYMENT_STRATEGY.md  DEPLOYMENT_TESTING_REPORT.md  DEVELOPMENT_CLOSURE_SUMMARY.md  DOMAIN_EXPANSION_2025.md  ENHANCED_GUI_COMPLETE_STATUS.md  ENHANCED_GUI_PHASE1_COMPLETION.md  ENHANCED_GUI_PHASE2_FOUNDATION.md  ENHANCED_GUI_PHASE3_FOUNDATION.md  ENHANCED_GUI_PHASE4_ENTERPRISE.md  ENHANCED_GUI_PHASE5_IMPLEMENTATION.md  ENHANCED_GUI_PHASE5_PLANNING.md  FUTURE_ENHANCEMENTS.md  IMMEDIATE_FIXES_COMPLETION.md  INFRASTRUCTURE_AS_CODE_EVALUATION.md  INSTALLATION.md  Makefile  NEXT_STEPS_COMPLETION.md  PHASE1_PROGRESS.md  PHASE_0_COMPLETION_REPORT.md  PHASE_2_COMPLETION_REPORT.md  PHASE_2_FINAL_RELEASE.md  PHASE_2_PROJECT_STATUS.md  PRE_COMMIT_FIXES_DOCUMENTATION.md  PRE_COMMIT_SETUP.md  PRODUCTION_READINESS_CHECKLIST.md  PROJECT_FINAL_STATUS_REPORT.md  PROJECT_IMPLEMENTATION_PLAN.md  PROJECT_SPLIT_COMPLETION.md  PROJECT_SPLIT_PLAN.md  PROJECT_STATUS.md  PROJECT_STATUS_COMPREHENSIVE.md  README.md  README_GO.md  (+38 more)
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  pages.yml  release.yml
configs/: data_sources.yaml
configs/demo_data/: aws_open_data_registry.yaml  data_access_guide.md  demo_workflows.yaml
configs/domains/: agricultural_sciences.yaml  astronomy_astrophysics.yaml  atmospheric_chemistry.yaml  benchmarking_performance.yaml  chemistry_computational.yaml  climate_modeling.yaml  cybersecurity_research.yaml  digital_humanities.yaml  drug_discovery.yaml  economics_finance.yaml  food_science_nutrition.yaml  forestry_natural_resources.yaml  genomics.yaml  geoscience.yaml  geospatial_research.yaml  machine_learning.yaml  marine_biology_oceanography.yaml  materials_science.yaml  mathematical_modeling.yaml  neuroscience.yaml  physics_computational.yaml  quantum_computing.yaml  renewable_energy_systems.yaml  social_sciences.yaml  sports_science_biomechanics.yaml  structural_biology.yaml  visualization_studio.yaml
configs/schemas/: domain_pack_schema.yaml
configs/templates/: aws_mpi_base.yaml
docs/: index.html  index.md
docs/domain-packs/: index.md
docs/domain-packs/computer-science/: ai-research.md  index.md
docs/domain-packs/life-sciences/: genomics.md  index.md
docs/domain-packs/physical-sciences/: climate-modeling.md  index.md
docs/domains/: genomics.html  index.html
docs/tutorials/: quickstart.html
domain-packs/: README.md
domain-packs/.github/workflows/: validate.yml
domain-packs/schemas/: domain-pack.schema.json
domain-packs/tools/: validate_domains.py
go/: .gitignore  .golangci.yml  AWS_INTEGRATION_TEST_PLAN.md  AWS_INTEGRATION_TEST_RESULTS.md  CLAUDE.md  ENHANCED_GUI_PLAN.md  JUPYTER_INTEGRATION_PLAN.md  Makefile  PHASE_1_COMPLETION_REPORT.md  PHASE_2C_COMPLETION_REPORT.md  PHASE_2_COMPLETE_SUMMARY.md  PHASE_2_FINAL_DOCUMENTATION.md  PHASE_2_PRODUCTION_RELEASE.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PROJECT_STATUS_FINAL.md  QUICK_START_GUIDE.md  RELEASE_NOTES.md  SECURITY_IMPROVEMENTS.md  coverage.out  go.mod  go.sum  gosec.sarif
go/cmd/: main.go
go/cmd/config/: main.go
go/cmd/deploy/: main.go
go/cmd/monitor/: main.go
go/docs/: CNAME  index.html
go/examples/: README.md  astronomy-project.yaml  chemistry-project.yaml  climate-research-project.yaml  genomics-project.yaml  geospatial-project.yaml  machine-learning-project.yaml
go/internal/aws/: client.go  infrastructure.go  monitoring.go  pricing.go
go/internal/config/: domain.go
go/internal/data/: bundling_engine.go  (+25 more)
packaging/chocolatey/: aws-research-wizard.nuspec
packaging/homebrew/: aws-research-wizard.rb
python/: agricultural_sciences_pack.py  aws_environment_checker.py  benchmarking_performance_pack.py  cybersecurity_research_pack.py  dataset_manager.py  demo_workflow_engine.py  food_science_nutrition_pack.py  forestry_natural_resources_pack.py  research_analyzer.py  research_infrastructure_wizard.py  researcher_ready_solutions.py  s3_transfer_optimizer.py  test_framework.py  tui_research_wizard.py  visualization_studio_pack.py
python-legacy/: DEPRECATED.md  agricultural_sciences_pack.py  atmospheric_chemistry_pack.py  aws_environment_checker.py  aws_mpi_optimizations.py  benchmarking_performance_pack.py  comprehensive_spack_domains.py  compute_data_coordinator.py  cybersecurity_research_pack.py  data_management_engine.py  dataset_manager.py  demo_workflow_engine.py  domain_tutorial_generator.py  finops_research_solutions.py  food_science_nutrition_pack.py  forestry_natural_resources_pack.py  geospatial_research_pack.py  gui_research_wizard.py  instancefinder.py  integrate_aws_data.py  renewable_energy_systems_pack.py  research_analyzer.py  research_infrastructure_wizard.py  research_solutions_analyzer.py  researcher_ready_solutions.py  s3_transfer_optimizer.py  spack_environment_importer.py  spack_research_solutions.py  test_framework.py  test_nextflow_s3.py  tui_aws_monitor.py  tui_domain_dashboard.py  tui_research_wizard.py  visualization_studio_pack.py
scripts/: check-coverage.sh  demo_spack_tui.sh  deploy_domain_packs.py  generate-domain-docs.py  lint-all.sh  tutorial_generator.py
spack-manager-go/: LICENSE  README.md  go.mod
terraform/: .gitignore
tests/: __init__.py  conftest.py
tests/unit/: __init__.py  test_aws_environment_checker.py  test_comprehensive_spack_domains.py  test_gui_research_wizard.py  test_research_infrastructure_wizard.py
tutorial-guard/: AI_INTEGRATION_COMPLETION.md  END_TO_END_EXECUTION_COMPLETION.md  MULTI_PROVIDER_COMPLETION.md  PROJECT_COMPLETION.md  PROVIDER_CERTIFICATION_COMPLETION.md  README.md  TESTING.md  go.mod  go.sum
tutorial-guard/docs/: ai-integration.md  backend-architecture.md  market-applications.md  project-separation-strategy.md  project-status.md
(+124 files in other folders)
